# cinderward

./: CMakeLists.txt  README.md  resources.qrc
.github/workflows/: build.yml
data/: org.nitrux.cinderward.desktop
qml/: main.qml
scripts/: build-deb.sh  install-build-deps.sh
src/: firewallbackend.cpp  firewallbackend.h  main.cpp
